--- a/Product_Landing_Page/style.css
+++ b/Product_Landing_Page/style.css
@@ -68,7 +68,7 @@ img {
 }
 
 .service-header h1 {
-    padding-top: 5%;
+    padding-top: 7%;
 }
 
 .service-container {
@@ -82,14 +82,19 @@ img {
     border-radius: 10px;
     text-align: center;
     flex: 1;
-    margin-left: 3%;
-    margin-right: 3%;
+    margin-left: 1.5%;
+    margin-right: 1%;
+}
+
+.service-item nav {
+    padding: 2%;
+    background-color: rgba(0, 0, 0, 0.336);
 }
 
 .service-item li {
-    text-align: left;
+    text-align: center;
     list-style: none;
-    font-size: 25px;
+    font-size: 20px;
     padding: 2% 2% 2% 2%;
 }
 
@@ -99,5 +104,27 @@ img {
 }
 
 .select {
-    text-align: center;
+    width: 80px;
+    height: 30px;
+    background-color: rgba(0, 0, 255, 0.274);
+    font-size: 20px;
+    margin: 0% 0% 2% 40%;
+}
+
+footer {
+    text-align: right;
+    margin-right: 2%;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.privacy {
+    margin-right: 2%;
+}
+
+.terms {
+    margin-right: 2%;
 }
