--- a/Product_Landing_Page/style.css
+++ b/Product_Landing_Page/style.css
@@ -8,7 +8,7 @@ body {
     background-color: rgba(0, 0, 0, 0.804);
     position: fixed;
     width: 100%;
-    height: 80px;
+    height: auto;
     color: white;
 }
 
@@ -50,12 +50,18 @@ img {
 }
 
 #home {
-    background-image: url("data/building.jpg");
-    min-height: 760px;
-    background-repeat: no-repeat;
+    background-image: url("data/Web-1290x688.jpg");
+    height: 960px;
+    background-repeat: repeat;
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
+}
+
+#video {
+    width: 65%;
+    height: 45%;
+    margin: 15%;
 }
 
 #service {
@@ -104,11 +110,13 @@ img {
 }
 
 .select {
-    width: 80px;
+    text-align: center;
+    width: 100px;
     height: 30px;
-    background-color: rgba(0, 0, 255, 0.274);
+    background-color: yellowgreen;
     font-size: 20px;
-    margin: 0% 0% 2% 40%;
+    margin: auto;
+    margin-bottom: 2%;
 }
 
 footer {
@@ -127,4 +135,28 @@ footer {
 
 .terms {
     margin-right: 2%;
+}
+
+@media(max-width:650px) {
+    #video {
+        width: 70%;
+        height: 50%;
+        margin: 30% 20%;
+    }
+    img {
+        width: 100px;
+        height: 100px;
+    }
+    .menu {
+        flex-direction: column;
+        justify-content: center;
+        margin: auto;
+    }
+    .service-container {
+        flex-direction: column;
+    }
+    .service-item {
+        margin: 0% 10% 5% 10%;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.19), 0 10px 16px rgba(0, 0, 0, 0.43);
+    }
 }
