--- a/Flex/style.css
+++ b/Flex/style.css
@@ -1,10 +1,12 @@
 html{
     background-color: azure;
-   margin: -10px;
+    margin: -10px;
+    overflow-x: hidden;
 }
-
 .header{
     background-color: black;
+    width: 100%;
+    height: 100%;
     text-align: center;
     font-size: 25px;
     color: beige;
@@ -12,4 +14,44 @@ html{
     flex-direction: row;
     justify-content: space-around;
    
+}
+.footer{
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    font-size: 25px;
+    color: beige;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+   
+}
+
+.main-container{
+    display: flex;
+    flex-shrink: 3;
+    
+}
+
+#sidebar{
+    background-color: rgba(0, 0, 0, 0.918);
+    height: max-content;
+    width: 40%;
+    text-align: center;
+    font-size: xx-large;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+}
+#sidebar .sidebar-item{
+    padding: 5% ;
+    
+}
+
+.contents{
+    background-color: rgba(0, 0, 0, 0.267);
+    height: auto;
+    text-align: center;
+    font-size: xx-large;
 }
