--- a/Tech_Doc_page/style.css
+++ b/Tech_Doc_page/style.css
@@ -11,6 +11,7 @@ body{
     padding: 20px;
     margin-bottom: 110px;
     text-align: justify;
+    color: rgb(240, 240, 240);
 
 }
 
@@ -40,6 +41,9 @@ body{
     overflow-y: auto;
   
 }
+p{
+    font-size: 1.2rem;
+}
 
 
 .nav-div > .nav-link{
@@ -51,6 +55,6 @@ body{
     border: 0.5rem 0 0.5rem 0;
     border-color: rgba(18, 81, 92, 0.884);
     border-style: solid;
-    justify-content: space-around;
+    
     
 }
