--- a/Personal_Protfolio/style.css
+++ b/Personal_Protfolio/style.css
@@ -1,5 +1,104 @@
-body{
-    background-color:black;
-    margin: 0%;
+body {
+  background-color: rgba(0, 0, 0, 0.726);
+  margin: 0%;
+  padding: 0%;
+  color: rgb(255, 255, 255);
+}
+
+#navbar {
+  background-color: rgba(238, 255, 0, 0.425);
+  padding: 0 1rem 0 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.logo {
+  padding: 1rem;
+  font-size: 2rem;
+}
+
+.header-menu {
+  margin: 0px;
+  padding: 0px;
+  display: flex;
+}
+
+.header-menu > li {
+  list-style: none;
+}
+.menu-item {
+  text-decoration: none;
+  padding: 1rem;
+  font-size: 2rem;
+  color: azure;
+  margin-right:2rem ;
+  
+}
+#welcome-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background-color: #000;
+    background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
+}
+
+.welcome-section-header{
+    font-size: 2rem;
+}
+.welcome-section-header > h2{
+    font-size: 1.5rem;
     padding: 0%;
+    text-align: center;
+}
+
+#projects{
+    text-align: center;
+    width: 100%;
+    height: 100vh;
+    background-color: #0f0;
+    background-image: linear-gradient(62deg, #2d7c3a 0%, #181719 100%);
+    
+}
+.project-section-header{
+    padding-top: 4rem;
+}
+
+.project-section-header > h1{
+    font-size: 3rem;
+}
+
+#blog-section{
+    text-align: center;
+    width: 100%;
+    height: 100vh;
+    background-color: #0f0;
+    background-image: linear-gradient(62deg, #2d7c3a 0%, #273d53 100%);
+}
+.blog-section-header{
+    padding-top: 4rem;
+}
+
+.blog-section-header > h1{
+    font-size: 3rem;
+}
+
+#contact-section{
+    text-align: center;
+    width: 100%;
+    height: 100vh;
+    background-color: #0f0;
+    background-image: linear-gradient(62deg, #577c2d 0%, #273d53 100%);
+}
+.contact-section-header{
+    padding-top: 4rem;
+}
+
+.contact-section-header > h1{
+    font-size: 3rem;
 }
